<resources>
    <string name="app_name">Medicare</string>
    <string name="history"><![CDATA[In pursuit of higher standards in patient care, undergraduate and post graduate teaching and vocational training at all levels of ancillary staff, Jinnah Medical and Dental College has established a 120 bed hospital to house its Department of Cardiology, Cardiothoracic Surgery and other surgical services. Medicare Cardiac & General Hospital is providing services from 1st December , 2014. The Hospital is offering comprehensive diagnostic and therapeutic services to patients with cardiovascular diseases and other diseases. Clinical facilities comprise of dedicated in-patient cardiac wards, private rooms,10 bed ICU, 13 bed CCU, 4 HDU, 7 OT’s and 2 Cath labs.]]></string>
    <string name="vision">To be nationally respected for excellence in patient care.</string>
    <string name="mission">To improve the health and healing of the people and communities we serve.</string>
    <string name="CARING">Every Medicare staff member touches the lives of the patients and families in our care. We treat those we serve and each other with kindness and compassion and strive to better understand and respond to the needs of a diverse community.</string>
    <string name="SAFETY">Patients and families have placed their lives and health in our hands. At Medicare our first priority - the rule of medicine - is to protect them from harm. We believe that maintaining the highest safety standard is critical to delivering high-quality care and that a safe workplace protects us all.</string>
    <string name="EXCELLENCE">At Medicare, only the best will do. We work as a team to bring experience, advanced technology and best practices to provide the highest-quality care for our patients and families. We devote ourselves to continuous improvement, excellence, professionalism and innovation in our work.</string>
    <string name="INTEGRITY">Our actions tell the world what Medicare is and what we stand for. We act ethically and responsibly in everything we do and hold ourselves accountable for our behavior. We bring respect, openness and honesty to our encounters with patients, families and co-workers and support the well-being of the communities we serve.</string>
    <string-array name="speciality_arrays">
        <item>Select any Speciality</item>
        <item>Cardiology And Cardiothoracic Surgery</item>
        <item>Clinical Nutrition And Dietetics</item>
        <item>Dental Surgery</item>
        <item>Dermatology And Cosmetology</item>
        <item>Dialysis</item>
        <item>E.N.T</item>
        <item>Endocrinology</item>
        <item>Eye</item>
        <item>Gastroenterology</item>
        <item>General Surgery</item>
        <item>Maxillo Facial</item>
        <item>Medicine</item>
        <item>Nephrology</item>
        <item>Neurology</item>
        <item>Neurosurgery</item>
        <item>Obstetrics and Gynaecology</item>
        <item>Oncology</item>
        <item>Orthopedics</item>
        <item>Pediatrics And Neonatology</item>
        <item>Plastic And Reconstructive Surgery</item>
        <item>Psychiatry</item>
        <item>Pulmonology</item>
        <item>Rheumatology</item>
        <item>Urology</item>
    </string-array>
    <string-array name="doctor_arrays">
        <item>Select a Doctor</item>
        <item>Dr. Jameel Ahmed Buyney</item>
        <item>Dr. Saajan Kukreja</item>
        <item>Dr. Amer Hussain</item>
    </string-array>
    <string name="title_activity_contact_us">Map</string>
</resources>
