<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="cardiac.general.hospital.medicare.About">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/about_banner"
            android:layout_marginBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/history_id">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medicare Hospital History"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:id="@+id/arrow_down1"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#ccc"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:id="@+id/history_text">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Introduction"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="15sp"
                android:textColor="#000"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/vision_id">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mission &amp; Vision"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:id="@+id/arrow_down2"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#ccc"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:id="@+id/vision_text">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Our Mission"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Our Vision"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/policy_id">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medicare Hospital Policy"
                android:textSize="20sp"
                android:textColor="#fff"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down"
                android:id="@+id/arrow_down3"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#ccc"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:id="@+id/policy_text">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CARING: We Do the Kind Thing"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CARING"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SAFETY: We Do the Safe Thing"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SAFETY"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EXCELLENCE: We Do the Best Thing"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXCELLENCE"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INTEGRITY: We Do the Right Thing"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/INTEGRITY"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
